Fix production authentication and CORS